Added some style and increase the responsisveness of the website

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <li><a href="#explore">Explore Foods</a></li>
               <li><a href="#review">Reviews</a></li>
               <li><a href="#faqq">FAQ</a></li>
-              <li class="hero-no">1200 345 123</li>
+              <li class="hero-no">6201443397</li>
             </ul>
           </div>
         </div>
@@ -49,8 +49,7 @@
           <div class="row hero-info">
             <div class="col-md-5">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Architecto ut cumque sapiente porro, corporis accusamus!
+                Enjoy fresh and delicious meals prepared with high-quality ingredients to nourish your body and mind.
               </p>
             </div>
           </div>
@@ -67,29 +66,18 @@
     </div>
 
     <div class="container-fluid banner">
-      <!-- <div class="row hero-footer">
-            <div class="col-sm-3 "><h4>1287+</h4> Savings</div>
-            <div class="col-sm-3"><h4>5786+</h4> Photos</div>
-            <div class="col-sm-3"><h4>1440+</h4> Rockets</div>
-            <div class="col-sm-3"><h4>7110+</h4> Globes</div>
-        </div> -->
 
       <div class="container" id="about">
         <div class="row">
-          <div class="col-md-6 aboutimg">
-            <img src="images/img/img-1.png" alt="" />
+          <div class="col-md-6 aboutimg ">
+            <img src="images/img/img-1.png" alt="" class="rounded-3" />
           </div>
           <div class="col-md-6 about-info">
-            <h4>
-              we pride ourselves on making real food from best ingredients
-            </h4>
+            <h4>Quality Ingredients, Unmatched Taste</h4>
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-              delectus facilis molestias, doloremque expedita sapiente ut qui
-              perspiciatis facere deserunt dolorum reprehenderit perferendis
-              reiciendis.
+              Our meals are crafted using farm-fresh produce, premium spices, and authentic flavors to give you the best dining experience.
             </p>
-            <div class="btn">Learn More</div>
+            <div class="btn1">Learn More</div>
           </div>
         </div>
       </div>
@@ -99,13 +87,10 @@
       <div class="row">
         <div class="col-md-7 about2-info">
           <h3>
-            When a man's stomach is full it makes no difference whether he is
-            rich or poor
+            A Happy Stomach Equals a Happy Life
           </h3>
           <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ut natus
-            nesciunt, at corrupti quibusdam veniam omnis? Expedita quis possimus
-            et placeat deserunt repudiandae?
+            We believe that good food should be accessible to all, ensuring every meal is not just tasty but also nutritious and fulfilling.
           </p>
           <div class="about2btn">Read More</div>
         </div>
@@ -122,10 +107,7 @@
         <div class="row mb-4">
           <div class="col-md-9 food-info">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
-              id ea pariatur corporis temporibus. Explicabo fugit exercitationem
-              illo iusto aliquam, totam laudantium quod. Aspernatur nesciunt
-              adipisci fugit culpa facilis nemo aliquam incidunt quae ea?
+              From delicious sandwiches to gourmet meals, we offer a variety of dishes that cater to all taste preferences and dietary needs.
             </p>
           </div>
         </div>
@@ -172,10 +154,10 @@
             <img src="images/review/review-1.jpg" alt="" />
           </div>
           <div class="col-md-7 user-review">
-            'far far away behind the word mountains,far from the countries
-            vokalia and consanantia ,there live the blind texts
+            "The food here is absolutely amazing! The flavors, the quality, everything is just perfect. Highly recommended!"
           </div>
-          <div class="col user-name mt-2 mb-3"><Ri:a>Ramesh Kumar</Ri:a>-UX Designer</div>
+          <div class="col user-name mt-2 mb-3"><P>Rahul Kumar</P>
+          </div>
         </div>
       </div>
       <div class="row slider">
@@ -196,37 +178,25 @@
           <div class="col-md-5 faq1">
             <h6>~Is Foodies Bread Really Baked Fresh Each Day?</h6>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language.
+              Yes! Our bread is baked fresh every morning to ensure the highest quality and best taste for our customers.
             </p>
           </div>
           <div class="col-md-5 faq2">
             <h6>~Do You Bake Breads Containing Animal Fats Or Products?</h6>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language.
+              We offer both vegan and non-vegan options. Please check the product details for specific ingredients.
             </p>
           </div>
           <div class="col-md-5 faq3">
             <h6>~Can I Order Your Products Online?</h6>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language.
+              Absolutely! Visit our website and place your order for home delivery or pickup at your nearest outlet.
             </p>
           </div>
           <div class="col-md-5 faq4">
             <h6>~When Are You Opening A Shop Near Me?</h6>
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language.
+              We are expanding rapidly! Stay updated by subscribing to our newsletter or following us on social media.
             </p>
           </div>
         </div>
